--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
       },
       "sourceType": "module"
     },
-    "plugins": ["react", "react-hooks"],
+    "plugins": ["react", "react-hooks", "prettier"],
     "env": {
       "es6": true,
       "jest": true
@@ -18,6 +18,7 @@
       }
     },
     "rules": {
+      "prettier/prettier": ["error"],
       "constructor-super": "error",
       "no-class-assign": "error",
       "no-confusing-arrow": [
