--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "@testing-library/react": "^13.4.0",
     "eslint": "^8.25.0",
     "eslint-config-next": "12.3.1",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
