--- a/package.json
+++ b/package.json
@@ -30,12 +30,19 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
     "bootstrap": "^5.2.3",
-    "firebase": "^9.14.0",
+    "firebase": "^9.23.0",
     "kill-port": "^2.0.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "@types/node": "20.4.1",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "autoprefixer": "10.4.14",
+    "postcss": "8.4.25",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.6"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
